remove cmake message

--- a/a_pkg/CMakeLists.txt
+++ b/a_pkg/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(a_pkg)
-message("CMakeLists A before find_package")
+#message("CMakeLists A before find_package")
 find_package(catkin REQUIRED)
-message("CMakeLists A after find_package")
+#message("CMakeLists A after find_package")
 catkin_package(
     CFG_EXTRAS a_pkg-extras.cmake
 )
